[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }

# Polkadot dependencies
polkadot-collator = { git = "https://github.com/paritytech/polkadot", branch = "cecton-keep-unpinned-para-blocks" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "cecton-keep-unpinned-para-blocks" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "cecton-keep-unpinned-para-blocks" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-runtime = { path = "../runtime" }

# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.0.6", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

[dev-dependencies]
# Cumulus dependencies
test-runtime = { package = "cumulus-test-runtime", path = "../test/runtime" }
test-client = { package = "cumulus-test-client", path = "../test/client" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "cecton-disable-default-announce" }

# Polkadot dependencies
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "cecton-keep-unpinned-para-blocks" }

# Other dependencies
env_logger = "0.7.1"
