[package]
name = "cumulus-consensus"
description = "Proxy Polkadot's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate deps
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }

# polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }

# other deps
futures = { version = "0.3.1", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.0.5", features = [ "derive" ] }
log = "0.4"
