[package]
name = "cumulus-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
memory-db = { version = "0.18.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
trie-db = { version = "0.20.0", default-features = false }
hashbrown = "0.6.1"

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli", default-features = false, features = [ "wasm-api" ] }

[dev-dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
test-client = { package = "cumulus-test-client", path = "../test/client" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-executive/std",
	"memory-db/std",
	"hash-db/std",
	"trie-db/std",
	"sp-trie/std",
	"parachain/std",
]
