[package]
name = 'cumulus-test-parachain-collator'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
build = 'build.rs'
edition = '2018'

[[bin]]
name = 'cumulus-test-parachain-collator'
path = 'src/main.rs'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = { version = "0.3.1", features = ["compat"] }
log = '0.4.8'
parking_lot = '0.9.0'
trie-root = '0.15.2'
codec = { package = 'parity-scale-codec', version = '1.0.0' }
structopt = "0.3.3"

# Parachain dependencies
parachain-runtime = { package = "cumulus-test-parachain-runtime", path = "runtime" }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "cecton-the-revenge-of-the-cli" }

# Cumulus dependencies
cumulus-consensus = { path = "../../consensus" }
cumulus-collator = { path = "../../collator" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }
polkadot-collator = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "cecton-the-revenge-of-the-cli" }

[build-dependencies]
vergen = '3.0.4'

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
