[package]
name = 'cumulus-test-parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-api = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-io = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-version = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-core = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }

frame-support = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
frame-executive = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
frame-system = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-disable-default-announce" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-disable-default-announce" }

# Cumulus dependencies
cumulus-runtime = { path = "../../../runtime", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-indices/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'cumulus-runtime/std',
]
