[package]
name = 'cumulus-test-parachain-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-api = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-io = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-version = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-core = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }

frame-support = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
frame-executive = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
frame-system = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default_features = false, branch = "cecton-the-revenge-of-the-cli" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cecton-the-revenge-of-the-cli" }

# Cumulus dependencies
cumulus-runtime = { path = "../../../runtime", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-indices/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'cumulus-runtime/std',
]
